# InfoGrep

./: .gitignore  LICENSE  Makefile  PLAN.md  README.md  install.sh  pyproject.toml  thoughts.md  uninstall.sh
.github/workflows/: ci.yml  macos-app.yml
docs/: index.html  styles.css
infogrep/: __init__.py  __main__.py  anserini.py  cli.py  config.py  engine.py  indexer.py  jvm.py  manifest.py  mcp_server.py  scheduler.py  web.py
infogrep/ingest/: __init__.py  chunker.py  graph.py  types.py  walker.py
infogrep/ingest/extract/: __init__.py  registry.py
infogrep/retrieval/: __init__.py  base.py  dense.py  fusion.py  graph.py  kb.py  sparse.py
infogrep/retrieval/embedders/: __init__.py  base.py  cache.py  hashing.py  registry.py  sentence_transformer.py
macos/: README.md  build.sh  main.swift
macos/assets/: AppIcon.icns
tests/: conftest.py  test_chunker.py  test_cjk.py  test_cli.py  test_config.py  test_dense.py  test_engine.py  test_filetypes.py  test_fusion.py  test_graph.py  test_indexer.py  test_integration_legal.py  test_jvm.py  test_kb.py  test_mcp.py  test_metadata.py  test_ocr.py  test_scheduler.py  test_sparse.py  test_staleness.py  test_walker.py  test_web.py
