[project]
name = "infogrep"
version = "0.0.1"
description = "Local-first content search engine (sparse + dense + knowledge base) for coding agents"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Qingyao Ai", email = "aiqingyao@gmail.com" }]
dependencies = [
    "typer>=0.12",
    "tomli>=2.0; python_version < '3.11'",
]

# Heavy, milestone-specific deps are added later via `uv add`:
#   M2 sparse  -> pyserini
#   M3 dense   -> zvec, torch, transformers, sentence-transformers
#   M1 ingest  -> pymupdf, python-docx, python-pptx
#   M4 mcp     -> mcp
[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
infogrep = "infogrep.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["infogrep"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
