[project]
name = "infogrep"
version = "0.0.3"
description = "Local-first content search engine (sparse + dense + knowledge base) for coding agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Qingyao Ai", email = "aiqingyao@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "typer>=0.12",
    "tomli>=2.0; python_version < '3.11'",
    "pymupdf>=1.27.2.3",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "pathspec>=1.1.1",
    "pyjnius>=1.6.1",
    "mcp>=1.28.0",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
# Semantic (embedding) search. Pulls in torch — sparse/graph/kb search work without it,
# so the base install stays small. The Anserini jar for sparse search is fetched on
# first use (see infogrep/anserini.py), not installed via pip.
dense = [
    "zvec>=0.5.1",
    "sentence-transformers>=5.6.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://qingyaoai.github.io/InfoGrep/"
Repository = "https://github.com/QingyaoAi/InfoGrep"
Issues = "https://github.com/QingyaoAi/InfoGrep/issues"

[project.scripts]
infogrep = "infogrep.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["infogrep"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
